# ZeroOS

./: .gitignore  Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  README.md  bootstrap  build-c-smoke.sh  build-fibonacci.sh  build-std-smoke.sh  matrix.yaml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-create
.ghk/: pre-commit
.github/actions/bootstrap/: action.yml
.github/actions/install-base/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  codeql.yml  publish-spike.yml  release.yml
crates/cargo-matrix/: CHANGELOG.md
crates/cargo-matrix/src/: matrix.rs
crates/htif/: Cargo.toml
crates/htif/src/: htif.rs
crates/zeroos/: Cargo.toml
crates/zeroos-allocator-buddy/: Cargo.toml
crates/zeroos-allocator-buddy/src/: allocator.rs
crates/zeroos-allocator-bump/: Cargo.toml
crates/zeroos-allocator-bump/src/: allocator.rs  lib.rs
crates/zeroos-allocator-linked-list/: Cargo.toml
crates/zeroos-allocator-linked-list/src/: allocator.rs
crates/zeroos-arch-riscv/: Cargo.toml  build.rs
crates/zeroos-arch-riscv/src/: boot.rs  lib.rs  ops.rs  trap.rs
crates/zeroos-build/: Cargo.toml
crates/zeroos-build/src/: linker.rs  main.rs
crates/zeroos-build/src/cmds/: build.rs  target.rs
crates/zeroos-build/src/files/: generic-linux.json.template  musl-toolchain.sh
crates/zeroos-build/src/spec/: arch.rs  llvm.rs  mod.rs  target.rs  utils.rs
crates/zeroos-build/src/toolchain/: discovery.rs  install.rs  mod.rs
crates/zeroos-debug/: Cargo.toml
crates/zeroos-device-console/: Cargo.toml
crates/zeroos-device-console/src/: lib.rs
crates/zeroos-device-null/: Cargo.toml
crates/zeroos-device-null/src/: lib.rs
crates/zeroos-device-urandom/: Cargo.toml
crates/zeroos-device-urandom/src/: lib.rs
crates/zeroos-device-zero/: Cargo.toml
crates/zeroos-device-zero/src/: lib.rs
crates/zeroos-foundation/: Cargo.toml
crates/zeroos-foundation/src/: arch.rs  entry.rs  lib.rs  syscall.rs
crates/zeroos-foundation/src/kfn/: mod.rs  random.rs  scheduler.rs  vfs.rs
crates/zeroos-foundation/src/ops/: random.rs  scheduler.rs  trap.rs  vfs.rs
crates/zeroos-foundation/src/utils/: global.rs  mod.rs  stack.rs
crates/zeroos-libunwind/: Cargo.toml
crates/zeroos-libunwind/src/: lib.rs
crates/zeroos-macros/: Cargo.toml
crates/zeroos-macros/src/: asm_block.rs
crates/zeroos-os-linux/: Cargo.toml  build.rs
crates/zeroos-os-linux/src/: lib.rs  syscall.rs
crates/zeroos-os-linux/src/handlers/: memory.rs  mod.rs  random.rs  thread.rs  vfs.rs
crates/zeroos-rng/: Cargo.toml
crates/zeroos-rng/src/: chacha.rs  lcg.rs  lib.rs  tests.rs
crates/zeroos-runtime-gnu/: Cargo.toml
crates/zeroos-runtime-gnu/src/: stack_builder.rs
crates/zeroos-runtime-gnu/src/riscv64/: bootstrap.rs
crates/zeroos-runtime-musl/: Cargo.toml
crates/zeroos-runtime-musl/src/: stack.rs
crates/zeroos-runtime-musl/src/riscv64/: bootstrap.rs
crates/zeroos-runtime-nostd/: Cargo.toml
crates/zeroos-runtime-nostd/src/: riscv64.rs
crates/zeroos-scheduler-cooperative/: Cargo.toml
crates/zeroos-scheduler-cooperative/src/: context.rs  lib.rs  ops.rs  scheduler.rs  thread.rs  trap_glue.rs
crates/zeroos-vfs-core/: Cargo.toml
crates/zeroos-vfs-core/src/: lib.rs  vfs.rs
crates/zeroos/src/: lib.rs
examples/batched-signatures/: Cargo.toml
examples/batched-signatures/src/: lib.rs  main.rs
examples/block-compression/: Cargo.toml
examples/block-compression/src/: lib.rs  main.rs
examples/c-smoke/c/: Makefile
examples/c-smoke/c/src/: main.c
examples/c-smoke/rust/: Cargo.toml
examples/c-smoke/rust/src/: lib.rs
examples/fft/: Cargo.toml
examples/fft/src/: lib.rs  main.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: main.rs
examples/graph-bfs/: Cargo.toml
examples/graph-bfs/src/: lib.rs  main.rs
examples/matrix-multiply/: Cargo.toml
examples/matrix-multiply/src/: lib.rs  main.rs
examples/merkle-tree/: Cargo.toml
examples/merkle-tree/src/: lib.rs  main.rs
examples/parallel-keccak/: Cargo.toml
examples/parallel-keccak/src/: lib.rs  main.rs
examples/parallel-mergesort/: Cargo.toml
examples/parallel-mergesort/src/: lib.rs  main.rs
examples/polynomial-eval/: Cargo.toml
examples/polynomial-eval/src/: lib.rs  main.rs
examples/prefix-sum/: Cargo.toml
examples/prefix-sum/src/: lib.rs  main.rs
examples/std-smoke/: Cargo.toml
examples/std-smoke/src/: main.rs
examples/wavelet-transform/: Cargo.toml
examples/wavelet-transform/src/: lib.rs  main.rs
scripts/: spike-builder
xtask/: Cargo.toml
xtask/src/: act.rs  findup.rs  main.rs  massage.rs  matrix.rs  sh.rs
