[package]
name = "zeroos-allocator-buddy"
version.workspace = true
edition.workspace = true
description = "Buddy allocator with low fragmentation for ZeroOS"

[lib]
name = "zeroos_allocator_buddy"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
foundation = { workspace = true, features = ["memory"] }
buddy_system_allocator.workspace = true
