[package]
name = "zeroos-allocator-bump"
version.workspace = true
edition.workspace = true
description = "Fast bump/arena allocator for ZeroOS - perfect for zkVM environments"

[lib]
name = "zeroos_allocator_bump"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
foundation = { workspace = true, features = ["memory"] }
