[package]
name = "zeroos-allocator-linked-list"
version.workspace = true
edition.workspace = true
description = "General-purpose linked list allocator for ZeroOS"

[lib]
name = "zeroos_allocator_linked_list"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
foundation = { workspace = true, features = ["memory"] }
linked_list_allocator.workspace = true
