[package]
name = "zeroos-device-urandom"
version.workspace = true
edition.workspace = true
description = "Deterministic /dev/urandom device for zkVM"

[lib]
name = "zeroos_device_urandom"
path = "src/lib.rs"

[dependencies]
foundation = { workspace = true, features = ["random"] }
libc = { workspace = true }
vfs-core = { workspace = true }
