[package]
name = "zeroos-os-linux"
version.workspace = true
edition.workspace = true
description = "Linux syscall number mappings for ZeroOS"

[lib]
name = "zeroos_os_linux"
path = "src/lib.rs"

[dependencies]
foundation = { workspace = true }
cfg-if.workspace = true
libc.workspace = true

[features]
memory = ["foundation/memory"]
scheduler = ["foundation/scheduler"]
vfs = ["foundation/vfs"]
random = ["foundation/random"]
