[package]
name = "zeroos-rng"
version.workspace = true
edition.workspace = true
description = "Random number generators for ZeroOS"

[lib]
name = "zeroos_rng"
path = "src/lib.rs"

[dependencies]
foundation = { workspace = true, features = ["random"] }
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
# Only for testing against reference implementation
rand_chacha.workspace = true

[features]
default = []
lcg = []
chacha = []
